--- a/inmobiliaria/src/assets/styles/FooterComponent.css
+++ b/inmobiliaria/src/assets/styles/FooterComponent.css
@@ -1,8 +1,16 @@
-.footer{
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    background-color: #f8f9fa;
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 50px;
-    background-color: gray;
-    text-align: left;
-}
+  }
+  
+  .footer p {
+    margin: 5px 0;
+    color: #333;
+  }
+  
