--- a/inmobiliaria/src/App.css
+++ b/inmobiliaria/src/App.css
@@ -36,3 +36,36 @@
     transform: rotate(360deg);
   }
 }
+.body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+
+.root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+
+.header {
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  width: 100%;
+}
+
+.main {
+  flex: 1;
+  padding: 20px;
+  background-color: #f9f9f9;
+}
+
+.footer {
+  background-color:white;
+  color: white;
+  padding: 10px 20px;
+  width: 100%;
+  text-align: center;
+}
