--- a/inmobiliaria/src/assets/styles/FooterComponent.css
+++ b/inmobiliaria/src/assets/styles/FooterComponent.css
@@ -1,10 +1,7 @@
 .footer {
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    padding: 10px;
+    padding: 10px 20 px;
     background-color: #f8f9fa;
-    position: absolute;
     bottom: 0;
     width: 100%;
   }
@@ -13,4 +10,5 @@
     margin: 5px 0;
     color: #333;
   }
+  
   
