boton editar, agregar, y eliminar propiedad en funcionamiento

--- a/inmobiliaria/src/assets/styles/FooterComponent.css
+++ b/inmobiliaria/src/assets/styles/FooterComponent.css
@@ -1,7 +1,7 @@
 .footer {
     align-items: center;
     padding: 10px 20 px;
-    background-color: #f8f9fa;
+    background-color: #237ad1;
     bottom: 0;
     width: 100%;
   }
