--- a/inmobiliaria/src/assets/styles/NewTipoPropiedad.css
+++ b/inmobiliaria/src/assets/styles/NewTipoPropiedad.css
@@ -1,99 +1,96 @@
 body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    margin: 0;
-    font-family: 'Arial', sans-serif;
-  }
-  
-  header {
-    background-color: #007bff;
-    color: white;
-    padding: 10px 20px;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000;
-  }
-  
-  footer {
-    background-color: #007bff;
-    color: white;
-    padding: 10px 20px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    z-index: 1000;
-    margin-top: 20 px;
-  }
-  
-  main {
-    flex: 1;
-    padding: 20px;
-    margin-top: 60px; 
-    margin-bottom: 60px;
-    background-color: #f9f9f9;
-  }
-  
-  .formulario {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .formulario h1 {
-    text-align: center;
-    margin-bottom: 20px;
-    color: #333;
-  }
-  
-  .formulario form div {
-    margin-bottom: 15px;
-  }
-  
-  .formulario label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-    color: #555;
-  }
-  
-  .formulario input[type="text"],
-  .formulario input[type="number"],
-  .formulario input[type="date"],
-  .formulario input[type="file"],
-  .formulario input[type="password"],
-  .formulario select {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .formulario input[type="checkbox"] {
-    margin-right: 10px;
-  }
-  
-  .formulario button {
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    border: none;
-    border-radius: 4px;
-    color: #fff;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  .formulario button:hover {
-    background-color: #0056b3;
-  }
-  
-  .formulario .error {
-    color: red;
-    margin-top: 10px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+  font-family: 'Arial', sans-serif;
+}
+
+header {
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  width: 100%;
+  z-index: 1000;
+  position: sticky;
+}
+
+footer {
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  width: 100%;
+  z-index: 1000;
+  position: sticky;
+}
+
+main {
+  flex: 1;
+  padding: 20px;
+  margin-top: 60px;
+  margin-bottom: 80px;
+  background-color: #f9f9f9;
+}
+
+.formulario {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 50px;
+}
+
+.formulario h1 {
+  text-align: center;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.formulario form div {
+  margin-bottom: 15px;
+}
+
+.formulario label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: #555;
+}
+
+.formulario input[type="text"],
+.formulario input[type="number"],
+.formulario input[type="date"],
+.formulario input[type="file"],
+.formulario input[type="password"],
+.formulario select {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.formulario input[type="checkbox"] {
+  margin-right: 10px;
+}
+
+.formulario button {
+  width: 100%;
+  padding: 10px;
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.formulario button:hover {
+  background-color: #0056b3;
+}
+
+.formulario .error {
+  color: red;
+  margin-top: 10px;
+}
